# value_investor

./: .env  .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.cursor/rules/: deferred-ideas.mdc
.github/workflows/: automation-orchestrator.yml  ci.yml  email-report-schedule.yml  email-report.yml  library-grow.yml  library-model-review.yml  main.yml  pages.yml  paper-auto.yml  verify-agents.yml
docs/: PROJECT_OBJECTIVE.md  app.js  charts.js  deferred-ideas.json  deferred-review.md  ii_unavailable.js  index.html  paper_sims.js  portfolio.js  styles.css
docs/data/: automation.json  companies_house_numbers.json  latest.json  (+2 more)
scripts/: agent_analyze.py  dispatch_orchestrator.sh  email_signals_agent.py  library_ladder_advance.py  run_screen.py  sp500_finish_buy_tier_research.py  sp500_finish_remaining_research.py  sp500_research_cost_test.py
tests/: test_agent_model_policy.py  test_automation_status.py  test_backtest.py  test_ch_pdf_extract.py  test_companies_house.py  test_constituents_fetch.py  test_cursor_api_key.py  test_data_library.py  test_data_quality.py  test_decision_pack.py  test_decision_review.py  test_deep_analysis.py  test_deferred_ideas.py  test_email.py  test_fx.py  test_historical_analysis.py  test_ii_coverage.py  test_library_dedupe.py  test_library_graduation.py  test_library_maintenance.py  test_library_retention.py  test_library_screen.py  test_macro_context.py  test_model_families.py  test_model_weights.py  test_models.py  test_paper_automation.py  test_paper_fund.py  test_portfolio_diversity.py  test_preflight.py  test_price_charts.py  test_providers.py  test_publish.py  test_research_agent.py  test_research_document.py  test_research_filings.py  test_research_format.py  test_research_gap_fill.py  test_research_ingest.py  test_research_overlay.py  (+19 more)
(+202 files in other folders)
